--- a/_sass/_includes/_component__header.scss
+++ b/_sass/_includes/_component__header.scss
@@ -68,6 +68,7 @@
   .header__cta {
     justify-self: end;
     align-self: center;
+    white-space: nowrap;
     display: none;
   }
 
